# fastbowling-analysis

./: .gitignore  README.md  config.yaml  extract_frames.py  main.py  metadata.py  pyproject.toml  requirements.txt  run_pose.py  utils.py  video_to_frames.py
.github/workflows/: ci.yml
backend/src/pacelab/: pipeline.py
backend/src/pacelab/core/: context_factory.py  settings.py  video_context.py
backend/src/pacelab/motion/: kinematics.py  signals.py
backend/src/pacelab/pose/: estimator.py
backend/src/pacelab/utils/: logging.py
backend/src/pacelab/video/: metadata.py  reader.py
backend/tests/: conftest.py
backend/tests/e2e/: test_pipeline.py
backend/tests/unit/: test_kinematics.py  test_signals.py
configs/: config.yaml  pose.yaml
core/: context_factory.py
docs/: coordinate_system.md  data_schema.md
scripts/: run_pipeline.sh
src/: pipeline.py
src/core/: context_factory.py  video_context.py
src/pose/: estimator.py
src/video/: metadata.py  reader.py
