[project]
name = "pacelab"
version = "0.2.0"
description = "Biomechanical pose pipeline for cricket fast-bowling analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mediapipe>=0.10.9",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/pacelab"]
