[project]
name = "pacelab"
version = "0.2.0"
description = "Biomechanical pose pipeline for cricket fast-bowling analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mediapipe>=0.10.9",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/pacelab"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
include = ["backend/src/pacelab"]
extraPaths = ["backend/src"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"


[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
